2010-11-13  Eli Zaretskii  <eliz@gnu.org>

	* display.texi (Usual Display): Characters with no fonts are not
	necessarily displayed as empty boxes.

2010-11-10  Martin Rudalics  <rudalics@gmx.at>

	* display.texi (Temporary Displays): Describe
	temp-buffer-show-specifiers.

2010-11-04  Martin Rudalics  <rudalics@gmx.at>

	* windows.texi (Resizing Windows): Explain OVERRIDE argumet for
	fit-window-to-buffer.
	(Displaying Buffers): Describe even-window-sizes, adjust-height
	and adjust-width buffer display specifiers.

2010-11-02  Martin Rudalics  <rudalics@gmx.at>

	* windows.texi (Displaying Buffers): Describe special handling
	of `not-this-window' and `not-this-frame' specifiers for
	`display-buffer'.

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* maps.texi (Standard Keymaps): Update File menu description.

2010-10-30  Martin Rudalics  <rudalics@gmx.at>

	* windows.texi (Buffers and Windows, Displaying Buffers): Adapt
	to new semantics of quit-restore window parameter and
	display-buffer-window (was display-buffer-window-and-buffer)
	semantics.

2010-10-28  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (elisp.dvi, elisp.pdf): Also include $emacsdir.

2010-10-27  Martin Rudalics  <rudalics@gmx.at>

	* windows.texi (Displaying Buffers, Switching Buffers): Describe
	new buffer display code.

	* frames.texi (Initial Parameters): Fix reference to buffer
	display section.

2010-10-24  Eli Zaretskii  <eliz@gnu.org>

	* display.texi (Window Systems): Deprecate use of window-system as
	a predicate.

2010-10-23  Glenn Morris  <rgm@gnu.org>

	* help.texi (Documentation Basics): Remove mentions of digest-doc and
	sorted-doc.

2010-10-15  Eli Zaretskii  <eliz@gnu.org>

	* os.texi (Dynamic Libraries): New node, with slightly modified
	text deleted from "Image Formats".
	(System Interface): Add @menu entry for "Dynamic Libraries".

	* display.texi (Image Formats): Remove description of
	image-library-alist.  (Renamed in 2010-10-13T14:50:06Z!lekktu@gmail.com.)
